--- a/ff16.gameplay.unlimitedairactions/ModConfig.json
+++ b/ff16.gameplay.unlimitedairactions/ModConfig.json
@@ -47,7 +47,7 @@
             }
         },
         "GitHubRelease": {
-            "UserName": "RonSerruya",
+            "UserName": "Ronserruya",
             "RepositoryName": "ff16.gameplay.unlimitedairactions",
             "UseReleaseTag": true,
             "AssetFileName": "Mod.zip"
